# evaluation-harness

./: .env.example  .gitignore  README.md  fastmcp.json  pyproject.toml
eval_harness/: __init__.py  cli.py  config.py  mcp_server.py  models.py  sync.py
eval_harness/format/: test_json_values.py
eval_harness/langfuse_client/: client.py  fetch_cases.py  resolve_run.py
eval_harness/targets/: excel.py  notion.py  test_excel.py
eval_harness/validate/: contract.py  contract_spec.py  test_contract.py  test_contract_spec.py
eval_sync/: __init__.py  cli.py  config.py  mcp_server.py  sync.py
eval_sync/format/: json_values.py  test_json_values.py
eval_sync/langfuse/: client.py  fetch_cases.py  resolve_run.py
eval_sync/targets/: excel.py  notion.py  test_excel.py
eval_sync/validate/: contract.py  test_contract.py
