[project]
name = "eval-sync-harness"
version = "0.1.0"
description = "Sync Langfuse eval runs to Notion or Excel for human grading"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastmcp>=2.0",
    "langfuse>=3.0",
    "notion-client>=2.2",
    "openpyxl>=3.1",
    "pydantic>=2.0",
    "python-dotenv>=1.0",
    "typer>=0.12",
]

[project.scripts]
eval-sync = "eval_sync.cli:app"

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["eval_sync"]

[tool.pytest.ini_options]
testpaths = ["eval_sync"]
