[project]
name = "eval-harness"
version = "0.1.0"
description = "Eval harness — pull Langfuse eval runs to Notion or Excel for human grading"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastmcp>=2.0",
    "langfuse>=3.0",
    "notion-client>=2.2",
    "openpyxl>=3.1",
    "pydantic>=2.0",
    "python-dotenv>=1.0",
    "typer>=0.12",
]

[project.scripts]
eval-harness = "eval_harness.cli:app"
eval-harness-mcp = "eval_harness.mcp_server:main"

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["eval_harness"]

[tool.pytest.ini_options]
testpaths = ["eval_harness"]
